<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_ra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtAccountTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_account_types"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRa" />

    <RadioGroup
        android:id="@+id/rgAccountTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:checkedButton="@id/rbNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAccountTypes">

        <RadioButton
            android:id="@+id/rbNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_normal" />

        <RadioButton
            android:id="@+id/rbSalvings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_savings" />

        <RadioButton
            android:id="@+id/rbSpecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_special" />
    </RadioGroup>

    <EditText
        android:id="@+id/etOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/et_owner_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtData" />

    <EditText
        android:id="@+id/etLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/et_limit"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNumber" />

    <EditText
        android:id="@+id/etIncomeDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/et_income_day"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_data"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRa" />

    <CheckBox
        android:id="@+id/cbQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="22dp"
        android:text="@string/cb_query"
        app:layout_constraintStart_toEndOf="@id/txtData"
        app:layout_constraintTop_toBottomOf="@id/txtRa" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/et_number"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOwnerName" />

    <Button
        android:id="@+id/btCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bt_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgAccountTypes" />

    <TextView
        android:id="@+id/txtBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCreate" />

    <TextView
        android:id="@+id/txtErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/txtBalance"
        app:layout_constraintTop_toBottomOf="@+id/btCreate" />

    <RadioGroup
        android:id="@+id/rgOperation"
        android:layout_width="288dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/rbWithdraw"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBalance">

        <RadioButton
            android:id="@+id/rbWithdraw"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_withdraw" />

        <RadioButton
            android:id="@+id/rbDeposit"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_deposit" />
    </RadioGroup>

    <EditText
        android:id="@+id/etValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_value"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOperation" />

    <Button
        android:id="@+id/btOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/bt_operation"
        app:layout_constraintStart_toEndOf="@+id/etValue"
        app:layout_constraintTop_toBottomOf="@+id/rgOperation" />

    <EditText
        android:id="@+id/etIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_income"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValue" />

    <Button
        android:id="@+id/btIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bt_income"
        app:layout_constraintStart_toEndOf="@+id/etIncome"
        app:layout_constraintTop_toBottomOf="@+id/btOperation" />

</androidx.constraintlayout.widget.ConstraintLayout>